--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
-    "react-firebase-hooks": "^5.1.1",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -42,17 +41,19 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "eslint-config-next": "^16.0.7",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^15.5.7",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
-    "react": "^18.3.1",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
