--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
-    "next": "^15.5.7",
+    "next": "15.5.9",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "react": "^19.2.1",
